# CryptoAnalysisBot

./: .gitignore  pyproject.toml  start_services.sh
libs/app_data/: pyproject.toml
libs/blueprints/: pyproject.toml
libs/blueprints/blueprints/: constants.py  models.py
libs/config/: pyproject.toml
libs/config/config/: kafka.py  telegram.py
services/admin_panel/: api.py  cli.py  pyproject.toml
services/analytics/: logic.py  main.py  pyproject.toml  repository.py  workers.py
services/analytics/alembic/: env.py
services/analytics/alembic/versions/: 20e3a00c640e_added_spikes_subscriptions_table.py  acdc8bb78ec6_created_subscriptions_table.py
services/analytics/db/: engine.py  models.py
services/analytics/services/: notification_manager.py  providers.py  subscription_manager.py
services/collector/: main.py  pyproject.toml
services/telegram_bot/: main.py  pyproject.toml
