[project]
name = "admin_panel"
version = "0.1.0"
dependencies = [
    "config",
    "blueprints",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "uvloop>=0.22.1",
    "app-data",
    "redis[hiredis]>=7.4.0",
    "dotenv>=0.9.9",
    "pydantic>=2.12.5",
    "httpx>=0.28.1",
]

[tool.uv.sources]
config = { workspace = true }
blueprints = { workspace = true }
app-data = { workspace = true }
